--- a/UPGRADE.asciidoc
+++ b/UPGRADE.asciidoc
@@ -152,6 +152,13 @@ The source of truth for roles is now in a configuration file instead of being in
 
 NOTE: The roles still exist in the database like before (node_category table), but their source of truth is now in the configuration file. Should you remove a role manually from roles.conf, it will *not* be removed from the database unless you manually go delete it from the database.
 
+Pfdetect configuration
+^^^^^^^^^^^^^^^^^^^^^^
+
+New parameters have been introduced in conf/pfdetect.conf. Run the following script to migrate your configuration.
+
+  /usr/local/pf/addons/upgrade/to-7.0-pfdetect-conf.pl
+
 Database schema updates
 ^^^^^^^^^^^^^^^^^^^^^^^
 
