add fingerbank.conf config for DB in cluster guide

--- a/docs/PacketFence_Clustering_Guide.asciidoc
+++ b/docs/PacketFence_Clustering_Guide.asciidoc
@@ -142,6 +142,12 @@ Then, in `conf/pfconfig.conf` :
 host=127.0.0.1
 ----
 
+Then, in `/usr/local/fingerbank/conf/fingerbank.conf`
+
+----
+[mysql]
+host=127.0.0.1
+----
 
 Now, reload the configuration and restart packetfence-config. You will see errors related to a cache write issue but you can safely ignore it for now. These appear because packetfence-config cannot connect to the database yet.
 
