Reverting renaming. Adding it's own Best Practice section. Fixing page layout.

--- a/docs/PacketFence_Administration_Guide.asciidoc
+++ b/docs/PacketFence_Administration_Guide.asciidoc
@@ -3759,16 +3759,17 @@ Best Practices
 --------------
 
 RHEL7 systemd early swapoff bug mitigation
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 A https://bugzilla.redhat.com/show_bug.cgi?id=1031158[known bug] is still present in systemd-219-30.el7_3.7.x86_64 shipped with CentOS. (Debian fixed it in 228-3).
 
 The bug arises because not all swap aliases are registered, which results in an incorrect dependence tree which results in swapoff being called way too early at shutdown.
 
 
-Workaround:
+Workaround
+++++++++++
 
-Obtain the list of swap items that should be considered by systemd for it to enforce a correct ordering:
+ * Obtain the list of swap items that should be considered by systemd for it to enforce a correct ordering:
 ---
 #grep swap /var/log/dmesg |grep "dead -> active"
 ---
@@ -3783,7 +3784,7 @@ In our example, that gave the following output:
 [    1.995678] systemd[1]: dev-disk-by\x2duuid-6509e6e1\x2daf2d\x2d4d23\x2d9ebd\x2da9aa8801e658.swap changed dead -> active
 ```
 
-Create /etc/systemd/system/swap.target and fill it with all swap aliases obtained from the previous command:
+ * Create /etc/systemd/system/swap.target and fill it with all swap aliases obtained from the previous command:
 
 ```
 [Unit]
@@ -3791,6 +3792,9 @@ Description=Swap
 Documentation=man:systemd.special(7)
 After=dev-disk-by\x2duuid-6509e6e1\x2daf2d\x2d4d23\x2d9ebd\x2da9aa8801e658.swap dev-dm1.swap dev-disk-by\x2did-dm\x2duuid\x2dLVM\x2dXOAK7DHxMdmQCrNdwWE3Pt836Q9pHYSGyrO9ycCGeIYavzbamVWNKMaVUMLf1NWZ.swap dev-disk-by\x2did-dm\x2dname\x2dcl\x2dswap.swap dev-cl-swap.swap dev-dm\x2d1.swap
 ```
+
+Operating System Best Practices
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 IPTables
 ~~~~~~~~
