--- a/docs/PacketFence_Administration_Guide.asciidoc
+++ b/docs/PacketFence_Administration_Guide.asciidoc
@@ -890,7 +890,7 @@ Option 1: Authentication against Active Directory (AD)
 
 CAUTION: If you are using an Active/Active or Active/Passive cluster, please follow the instructions under 'Option 1b' since the instructions below do not currently work in a cluster.
 
-Go in the Administration interface under *Configuration -> Policies and Access Control -> Domains -> Microsoft Active Directory Domains*.
+Go in the Administration interface under *Configuration -> Policies and Access Control -> Domains -> Active Directory Domains*.
 
 NOTE: If you can't access this section and you have previously configured your server to bind to a domain externally to PacketFence, make sure you run `/usr/local/pf/addons/AD/migrate.pl`
 
@@ -931,7 +931,7 @@ Next, restart PacketFence in *Status -> Services*
 Multiple domains authentication
 +++++++++++++++++++++++++++++++
 
-First configure your domains in *Configuration -> Policies and Access Control -> Domains -> Microsoft Active Directory Domains*.
+First configure your domains in *Configuration -> Policies and Access Control -> Domains -> Active Directory Domains*.
 
 Once they are configured, go in *Configuration -> Policies and Access Control -> Domains -> REALMS*.
 
@@ -3813,7 +3813,7 @@ Performance optimization
 NTLM authentication caching
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-NOTE: This section assumes that you already have an Active Directory domain configuration both in 'Configuration->Policies and Access Control->Domains->Microsoft Active Directory Domains' and 'Configuration->Policies and Access Control->Sources'. If you don't, you need to first configure those. Refer to the appropriate sections of this guide for details on how to configure those two components.
+NOTE: This section assumes that you already have an Active Directory domain configuration both in 'Configuration->Policies and Access Control->Domains->Active Directory Domains' and 'Configuration->Policies and Access Control->Sources'. If you don't, you need to first configure those. Refer to the appropriate sections of this guide for details on how to configure those two components.
 
 CAUTION: The cache requires minimally Windows Server 2008. Older versions will not work.
 
@@ -3843,7 +3843,7 @@ PacketFence configuration
 
 First of all, you will need to enable the NTLM caching globally by enabling 'NTLM Redis cache' in 'Configuration->System Configuration->Main Configuration->Advanced'. You then need to restart radiusd.
 
-Once that is done, you need to configure PacketFence to start caching the credentials. In order to do so, go in 'Configuration->Policies and Access Control->Domains->Microsoft Active Directory Domains' and select the domain you want to cache the credentials for. 
+Once that is done, you need to configure PacketFence to start caching the credentials. In order to do so, go in 'Configuration->Policies and Access Control->Domains->Active Directory Domains' and select the domain you want to cache the credentials for. 
 
 Next, go in the 'NTLM cache' tab and:
 
