--- a/html/pfappserver/lib/pfappserver/I18N/en.po
+++ b/html/pfappserver/lib/pfappserver/I18N/en.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 6.5.9\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2017-03-30 11:04-0400\n"
+"PO-Revision-Date: 2017-04-03 10:52-0400\n"
 "Last-Translator: Inverse inc. <info@inverse.ca>\n"
 "Language-Team: English\n"
 "Language: en\n"
@@ -285,10 +285,6 @@ msgstr ""
 
 # html/pfappserver/root/configurator/fingerbank.tt
 msgid "Activate MySQL"
-msgstr ""
-
-# html/pfappserver/root/configurator/fingerbank.tt
-msgid "Activate MySQL as the Fingerbank backend."
 msgstr ""
 
 # html/pfappserver/lib/pfappserver/Form/Config/ProfileCommon.pm
@@ -673,7 +669,7 @@ msgid "Amount of time before the violation can reoccur. This is useful to allow 
 msgstr ""
 
 # /usr/local/fingerbank/conf/fingerbank.conf.doc (upstream.sqlite_db_retention)
-msgid "Amount of upstream databases to retain on disk in db/.Should be at least one in case any running processes are still pointing on the old file descriptor of the database."
+msgid "Amount of upstream databases to retain on disk in db/. Should be at least one in case any running processes are still pointing on the old file descriptor of the database."
 msgstr ""
 
 # html/pfappserver/lib/pfappserver/Form/Config/Domain.pm
@@ -2438,6 +2434,14 @@ msgstr ""
 msgid "Enable or disable WISPr redirection capabilities on the captive-portal"
 msgstr ""
 
+# html/pfappserver/lib/pfappserver/Form/Config/Pfmon/ip4log_cleanup.pm
+msgid "Enable or disable ip4log rotation (moving ip4log_history records to ip4log_archive)<br>If disabled, this task will delete from the iplog_history table rather than the iplog_archive using the iplog rotation window, interval, batch and timeout parameters."
+msgstr ""
+
+# html/pfappserver/lib/pfappserver/Form/Config/Pfmon/ip6log_cleanup.pm
+msgid "Enable or disable ip6log rotation (moving ip6log_history records to ip6log_archive)<br>If disabled, this task will delete from the iplog_history table rather than the iplog_archive using the iplog rotation window, interval, batch and timeout parameters."
+msgstr ""
+
 # conf/documentation.conf (captive_portal.network_detection)
 msgid "Enable the automatic network detection feature for registration auto-redirect"
 msgstr ""
@@ -2888,8 +2892,32 @@ msgstr ""
 msgid "Hours"
 msgstr ""
 
+# html/pfappserver/lib/pfappserver/Form/Config/Pfmon/node_cleanup.pm
+msgid "How long can a registered node be inactive on the network before it becomes unregistered"
+msgstr ""
+
+# html/pfappserver/lib/pfappserver/Form/Config/Pfmon/node_cleanup.pm
+msgid "How long can an unregistered node be inactive on the network before being deleted.<br>This shouldn't be used if you are using port-security"
+msgstr ""
+
 # conf/documentation.conf (fencing.redirtimer)
 msgid "How long to display the progress bar during trap release. Default value is based on VLAN enforcement techniques. Inline enforcement only users could lower the value."
+msgstr ""
+
+# html/pfappserver/lib/pfappserver/Form/Config/Pfmon/ip4log_cleanup.pm
+msgid "How long to keep a ip4log archive entry before deleting it (or ip4log history if rotation is disabled)"
+msgstr ""
+
+# html/pfappserver/lib/pfappserver/Form/Config/Pfmon/ip6log_cleanup.pm
+msgid "How long to keep a ip6log archive entry before deleting it (or ip6log history if rotation is disabled)"
+msgstr ""
+
+# html/pfappserver/lib/pfappserver/Form/Config/Pfmon/ip4log_cleanup.pm
+msgid "How long to keep ip4log history entry before rotating it to ip4log archive."
+msgstr ""
+
+# html/pfappserver/lib/pfappserver/Form/Config/Pfmon/ip6log_cleanup.pm
+msgid "How long to keep ip6log history entry before rotating it to ip6log archive."
 msgstr ""
 
 # conf/documentation.conf (fencing.wait_for_redirect)
@@ -3135,6 +3163,10 @@ msgstr ""
 
 # html/pfappserver/root/config/pfmon/list.tt
 msgid "Interval"
+msgstr ""
+
+# html/pfappserver/lib/pfappserver/Form/Config/Pfmon.pm
+msgid "Interval (frequency) at which the task is executed.<br>Requires a restart of pfmon to be fully effective. Otherwise, it will be taken in consideration next time the tasks runs."
 msgstr ""
 
 # conf/documentation.conf (inline.layer3_accounting_sync_interval)
@@ -6894,7 +6926,7 @@ msgid "The cost factor to apply to the password hashing if applicable.Currently 
 msgstr ""
 
 # html/pfappserver/root/admin/wrapper.tt
-msgid "The database is in readonly mode not all functionality is available"
+msgid "The database is in readonly mode. Not all functionality is available."
 msgstr ""
 
 # /usr/local/fingerbank/conf/fingerbank.conf.doc (mysql.database)
@@ -8028,6 +8060,10 @@ msgstr ""
 
 # html/pfappserver/lib/pfappserver/Form/Config/Domain.pm
 msgid "When this is enabled, an async job will cache the NTLM credentials of the user every time he connects."
+msgstr ""
+
+# html/pfappserver/lib/pfappserver/Form/Config/Pfmon.pm
+msgid "Whether or not this task is enabled.<br>Requires a restart of pfmon to be effective."
 msgstr ""
 
 # html/pfappserver/lib/pfappserver/Form/Config/Domain.pm
