--- a/UPGRADE.asciidoc
+++ b/UPGRADE.asciidoc
@@ -63,7 +63,7 @@ Once the additionnal steps are completed, restart packetfence-config and packetf
   /usr/local/pf/bin/pfcmd fixpermissions
   /usr/local/pf/bin/pfcmd pfconfig clear_backend
   service packetfence-config restart
-  service packetfence restart
+  /usr/local/pf/bin/pfcmd service pf restart
 
 Upgrading from a version prior to 7.0.0
 ---------------------------------------
